--- a/boards/ESP-General.ini
+++ b/boards/ESP-General.ini
@@ -55,19 +55,24 @@ build_flags =
 	-DSDCARD_MOSI=-1
 
 	; tft vars
+	-DHAS_SCREEN=1
+	-DUSER_SETUP_LOADED=1
+	-DUSE_HSPI_PORT=1
+	-DTFT_HEIGHT=128
+	-DTFT_WIDTH=160
 	-DROTATION=1
 	-DBACKLIGHT=-1  ; tft backlight pin
 	-DMINBRIGHT=160  ; unused?
 	-DSMOOTH_FONT=1
 	-DTFT_DISPON=0x29
 	-DTFT_DISPOFF=0x28
-	-DTFT_CS=-1
-	-DTFT_DC=-1
-	-DTFT_RST=-1
+	-DTFT_CS=19
+	-DTFT_DC=16
+	-DTFT_RST=4
 	-DTOUCH_CS=-1
-	-DTFT_MOSI=-1
-	-DTFT_SCLK=-1
-	-DTFT_BL=-1
+	-DTFT_MOSI=11
+	-DTFT_SCLK=9
+	-DTFT_BL=17
 	; text sizes
 	-DFP=1
 	-DFM=2
