--- a/boards/ESP-General.ini
+++ b/boards/ESP-General.ini
@@ -54,33 +54,37 @@ build_flags =
 	-DSDCARD_MISO=-1
 	-DSDCARD_MOSI=-1
 
+	-DUSE_HSPI_PORT=1
 	; tft vars
 	-DHAS_SCREEN=1
+	-DTFT_RGB_ORDER=1
+	-DTFT_HEIGHT=160
+	-DTFT_WIDTH=128
 	-DUSER_SETUP_LOADED=1
-	-DUSE_HSPI_PORT=1
-	-DTFT_HEIGHT=128
-	-DTFT_WIDTH=160
-	-DROTATION=1
+	-DST7735_DRIVER=1
+	-DROTATION=5
 	-DBACKLIGHT=-1  ; tft backlight pin
-	-DMINBRIGHT=160  ; unused?
+	-DMINBRIGHT=100  ; unused?
 	-DSMOOTH_FONT=1
 	-DTFT_DISPON=0x29
 	-DTFT_DISPOFF=0x28
-	-DTFT_CS=19
+	-DTFT_CS=39
 	-DTFT_DC=16
-	-DTFT_RST=4
+	-DTFT_RST=15
 	-DTOUCH_CS=-1
-	-DTFT_MOSI=11
-	-DTFT_SCLK=9
+	-DTFT_MOSI=35
+	-DTFT_SCLK=36
 	-DTFT_BL=17
 	; text sizes
 	-DFP=1
 	-DFM=2
 	-DFG=3
 	; ui control buttons
-	;-DSEL_BTN=1
-	;-DUP_BTN=2  ; also work as ESC
-	;-DDW_BTN=3  ; also work as NEXT
+	-DHAS_BTN=1
+	-DBTN_ACT=LOW
+	-DSEL_BTN=20
+	-DUP_BTN=21  ; also work as ESC
+	-DDW_BTN=47  ; also work as NEXT
 	-DBTN_ALIAS='"OK"'
 
 	;FM Radio
