--- a/boards/ESP-General.ini
+++ b/boards/ESP-General.ini
@@ -62,7 +62,7 @@ build_flags =
 	-DTFT_WIDTH=128
 	-DUSER_SETUP_LOADED=1
 	-DST7735_DRIVER=1
-	-DROTATION=5
+	-DROTATION=9 ; 5, 9
 	-DBACKLIGHT=-1  ; tft backlight pin
 	-DMINBRIGHT=100  ; unused?
 	-DSMOOTH_FONT=1
