--- a/platformio.ini
+++ b/platformio.ini
@@ -23,8 +23,8 @@ default_envs =
 	lilygo-t-deck
 	lilygo-t-display-s3
 ;uncomment to not use global dirs to avoid possible conflicts
-;platforms_dir = .pio/platforms
-;packages_dir = .pio/packages
+platforms_dir = .pio/platforms
+packages_dir = .pio/packages
 build_cache_dir = .pio/buildcache
 cache_dir = .pio/cache
 
