buttons support? no!

--- a/boards/ESP-General.ini
+++ b/boards/ESP-General.ini
@@ -62,7 +62,7 @@ build_flags =
 	-DTFT_WIDTH=128
 	-DUSER_SETUP_LOADED=1
 	-DST7735_DRIVER=1
-	-DROTATION=9 ; 5, 9
+	-DROTATION=9 ; 5, 9 / 13
 	-DBACKLIGHT=-1  ; tft backlight pin
 	-DMINBRIGHT=100  ; unused?
 	-DSMOOTH_FONT=1
@@ -81,7 +81,7 @@ build_flags =
 	-DFG=3
 	; ui control buttons
 	-DHAS_BTN=1
-	-DBTN_ACT=LOW
+	-DBTN_ACT=HIGH
 	-DSEL_BTN=20
 	-DUP_BTN=21  ; also work as ESC
 	-DDW_BTN=47  ; also work as NEXT
