--- a/boards/ESP-General.ini
+++ b/boards/ESP-General.ini
@@ -33,7 +33,7 @@ build_flags =
 	; grove pins
 	; defaults from https://github.com/espressif/arduino-esp32/blob/master/variants/esp32s3/pins_arduino.h
 	-DGROVE_SDA=8  ; default RF TX pin
-	-DGROVE_SCL=46  ; default IR/RF RX pin
+	-DGROVE_SCL=45  ; default IR/RF RX pin
 	;-DALLOW_ALL_GPIO_FOR_IR_RF=1 ; Set this option to make use of all GPIOs, from 1 to 44 to be chosen, except TFT and SD pins
 
 	; ir led pin
@@ -62,9 +62,9 @@ build_flags =
 	-DTFT_WIDTH=128
 	-DUSER_SETUP_LOADED=1
 	-DST7735_DRIVER=1
-	-DROTATION=9 ; 5, 9 / 13
+	-DROTATION=-20 ; 5, 9 / 13
 	-DBACKLIGHT=-1  ; tft backlight pin
-	-DMINBRIGHT=100  ; unused?
+	-DMINBRIGHT=100 ; unused?
 	-DSMOOTH_FONT=1
 	-DTFT_DISPON=0x29
 	-DTFT_DISPOFF=0x28
@@ -82,9 +82,9 @@ build_flags =
 	; ui control buttons
 	-DHAS_BTN=1
 	-DBTN_ACT=HIGH
-	-DSEL_BTN=20
-	-DUP_BTN=21  ; also work as ESC
-	-DDW_BTN=47  ; also work as NEXT
+	-DSEL_BTN=48
+	-DUP_BTN=21
+	-DDW_BTN=47
 	-DBTN_ALIAS='"OK"'
 
 	;FM Radio
